--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   cached_network_image: ^3.2.0
   pull_to_refresh: ^2.0.0
   awesome_dialog: ^2.2.1
-
+  screenshot: ^1.2.3
+  permission_handler: ^10.0.0
+  image_cropper: ^3.0.0
 
 dev_dependencies:
   flutter_test:
