--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   screenshot: ^1.2.3
   permission_handler: ^10.0.0
   image_cropper: ^3.0.0
+  swipe_cards: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
