--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   permission_handler: ^10.0.0
   image_cropper: ^3.0.0
   swipe_cards: ^1.0.0
+  dotted_border: ^2.0.0+2
 
 
 dev_dependencies:
