--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   swipe_cards: ^1.0.0
   dotted_border: ^2.0.0+2
   share_plus: ^4.0.10+1
+  auto_size_widget: ^0.0.4
 
 
 dev_dependencies:
